--- a/index.html
+++ b/index.html
@@ -1,1 +1,57 @@
-<!DOCTYPE html> <html> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width,initial-scale=1"> <meta http-equiv="X-UA-Compatible" content="ie=edge"> <title>JS-book</title> <link rel="shortcut icon" href="favicon.ico"><link href="bundle-7c70e205.css" rel="stylesheet"></head> <body> <noscript> <link rel="stylesheet" href="/static/no-script.css"> <div class="no-script"> <div class="no-script__text"> <p>You need to enable <span>JavaScript</span> <br> in your browser to start this application</p> <a href="/">Try again</a> </div> </div> </noscript> <div id="app"></div> <script type="text/javascript" src="bundle-7c70e205.js"></script></body> </html> 
+<!DOCTYPE html> <html> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width,initial-scale=1"> <meta http-equiv="X-UA-Compatible" content="ie=edge"> <title>JS-book</title> <link rel="shortcut icon" href="favicon.ico"><link href="bundle-9dfb8a75.css" rel="stylesheet"></head> <body> <noscript> <style> html, body {
+        font-family: sans-serif;
+        overflow: hidden;
+        padding: 0;
+        margin: 0;
+      }
+
+      .no-script {
+        position: relative;
+        display: flex;
+        color: #fff;
+        justify-content: center;
+        text-align: center;
+        align-items: center;
+        min-height: 100vh;
+        background-color: black;
+        background-position: 0 0, 40px 60px, 130px 270px, 70px 100px, center 15%;
+        background-image: radial-gradient(white, rgba(255, 255, 255, .2) 2px, transparent 40px), radial-gradient(white, rgba(255, 255, 255, .15) 1px, transparent 30px), radial-gradient(white, rgba(255, 255, 255, .1) 2px, transparent 40px), radial-gradient(rgba(255, 255, 255, .4), rgba(255, 255, 255, .1) 2px, transparent 30px), url('../static/img/favicon.png');
+        background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px, 150px auto;
+        background-repeat: repeat, repeat, repeat, repeat, no-repeat;
+      }
+
+      .no-script__text {
+        position: absolute;
+        top: 45%;
+        font-size: 2em;
+        padding: 0 15px;
+      }
+
+      .no-script__text br {
+        display: none;
+      }
+
+      .no-script__text span {
+        color: #00d8ff;
+      }
+
+      .no-script__text a {
+        font-size: 0.55em;
+        color: #fff;
+      }
+
+      .no-script__text a:hover {
+        color: #00d8ff;
+      }
+
+      @media screen and (min-width: 1030px) {
+        .no-script br {
+          display: block;
+        }
+      }
+
+      @media screen and (max-width: 600px) {
+        .no-script__text {
+          font-size: 1.5em;
+        }
+      } </style> <div class="no-script"> <div class="no-script__text"> <p>You need to enable <span>JavaScript</span> <br> in your browser to start this application</p> <a href="/">Try again</a> </div> </div> </noscript> <div id="app"></div> <script type="text/javascript" src="bundle-9dfb8a75.js"></script></body> </html> 
