--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <html> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width,initial-scale=1"> <meta http-equiv="X-UA-Compatible" content="ie=edge"> <title>JS-book</title> <link rel="shortcut icon" href="favicon.ico"><link href="bundle-9dfb8a75.css" rel="stylesheet"></head> <body> <noscript> <style> html, body {
+<!DOCTYPE html> <html> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width,initial-scale=1"> <meta http-equiv="X-UA-Compatible" content="ie=edge"> <title>JS-book</title> <link rel="shortcut icon" href="favicon.ico"><link href="bundle-e32a8411.css" rel="stylesheet"></head> <body> <noscript> <style> html, body {
         font-family: sans-serif;
         overflow: hidden;
         padding: 0;
@@ -15,7 +15,7 @@
         min-height: 100vh;
         background-color: black;
         background-position: 0 0, 40px 60px, 130px 270px, 70px 100px, center 15%;
-        background-image: radial-gradient(white, rgba(255, 255, 255, .2) 2px, transparent 40px), radial-gradient(white, rgba(255, 255, 255, .15) 1px, transparent 30px), radial-gradient(white, rgba(255, 255, 255, .1) 2px, transparent 40px), radial-gradient(rgba(255, 255, 255, .4), rgba(255, 255, 255, .1) 2px, transparent 30px), url('../static/img/favicon.png');
+        background-image: radial-gradient(white, rgba(255, 255, 255, .2) 2px, transparent 40px), radial-gradient(white, rgba(255, 255, 255, .15) 1px, transparent 30px), radial-gradient(white, rgba(255, 255, 255, .1) 2px, transparent 40px), radial-gradient(rgba(255, 255, 255, .4), rgba(255, 255, 255, .1) 2px, transparent 30px), url('https://raw.githubusercontent.com/EvgenyLeukhin/js-book/master/static/img/favicon.png');
         background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px, 150px auto;
         background-repeat: repeat, repeat, repeat, repeat, no-repeat;
       }
@@ -54,4 +54,4 @@
         .no-script__text {
           font-size: 1.5em;
         }
-      } </style> <div class="no-script"> <div class="no-script__text"> <p>You need to enable <span>JavaScript</span> <br> in your browser to start this application</p> <a href="/">Try again</a> </div> </div> </noscript> <div id="app"></div> <script type="text/javascript" src="bundle-9dfb8a75.js"></script></body> </html> 
+      } </style> <div class="no-script"> <div class="no-script__text"> <p>You need to enable <span>JavaScript</span> <br> in your browser to start this application</p> <a href="/">Try again</a> </div> </div> </noscript> <div id="app"></div> <script type="text/javascript" src="bundle-e32a8411.js"></script></body> </html> 
