--- a/src/index.html
+++ b/src/index.html
@@ -40,33 +40,23 @@
         padding: 0 15px;
       }
 
-      .no-script__text br {
-        display: none;
-      }
+      .no-script__text br { display: none; }
 
-      .no-script__text span {
-        color: #00d8ff;
-      }
+      .no-script__text span { color: #00d8ff; }
 
       .no-script__text a {
         font-size: 0.55em;
         color: #fff;
       }
 
-      .no-script__text a:hover {
-        color: #00d8ff;
-      }
+      .no-script__text a:hover { color: #00d8ff; }
 
       @media screen and (min-width: 1030px) {
-        .no-script br {
-          display: block;
-        }
+        .no-script br { display: block; }
       }
 
       @media screen and (max-width: 600px) {
-        .no-script__text {
-          font-size: 1.5em;
-        }
+        .no-script__text { font-size: 1.5em; }
       }
     </style>
 
@@ -75,7 +65,7 @@
         <p>You need to enable
           <span>JavaScript</span>
           <br> in your browser to start this application</p>
-        <a href="/">Try again</a>
+        <a href="https://evgenyleukhin.github.io/js-book/">Try again</a>
       </div>
     </div>
 
