--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <html> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width,initial-scale=1"> <meta http-equiv="X-UA-Compatible" content="ie=edge"> <title>JS-book</title> <link rel="shortcut icon" href="favicon.ico"><link href="bundle-e32a8411.css" rel="stylesheet"></head> <body> <noscript> <style> html, body {
+<!DOCTYPE html> <html> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width,initial-scale=1"> <meta http-equiv="X-UA-Compatible" content="ie=edge"> <title>JS-book</title> <link rel="shortcut icon" href="favicon.ico"><link href="bundle-fa020d4f.css" rel="stylesheet"></head> <body> <noscript> <style> html, body {
         font-family: sans-serif;
         overflow: hidden;
         padding: 0;
@@ -27,31 +27,21 @@
         padding: 0 15px;
       }
 
-      .no-script__text br {
-        display: none;
-      }
+      .no-script__text br { display: none; }
 
-      .no-script__text span {
-        color: #00d8ff;
-      }
+      .no-script__text span { color: #00d8ff; }
 
       .no-script__text a {
         font-size: 0.55em;
         color: #fff;
       }
 
-      .no-script__text a:hover {
-        color: #00d8ff;
-      }
+      .no-script__text a:hover { color: #00d8ff; }
 
       @media screen and (min-width: 1030px) {
-        .no-script br {
-          display: block;
-        }
+        .no-script br { display: block; }
       }
 
       @media screen and (max-width: 600px) {
-        .no-script__text {
-          font-size: 1.5em;
-        }
-      } </style> <div class="no-script"> <div class="no-script__text"> <p>You need to enable <span>JavaScript</span> <br> in your browser to start this application</p> <a href="/">Try again</a> </div> </div> </noscript> <div id="app"></div> <script type="text/javascript" src="bundle-e32a8411.js"></script></body> </html> 
+        .no-script__text { font-size: 1.5em; }
+      } </style> <div class="no-script"> <div class="no-script__text"> <p>You need to enable <span>JavaScript</span> <br> in your browser to start this application</p> <a href="https://evgenyleukhin.github.io/js-book/">Try again</a> </div> </div> </noscript> <div id="app"></div> <script type="text/javascript" src="bundle-fa020d4f.js"></script></body> </html> 
